--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,11 @@ pygments: true
 permalink: /blog/:year/:month/:day/:title.html
 
 # Number of news stories on the front page.
-front_page_news: 8
+front_page_news: 2
 
 # Base pathname for links.
-base: 'http://irenezhang.net'
+#base: 'http://irenezhang.net'
+base: ''
 
 # Navigation bar links.
 navigation:
