--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ pygments: true
 permalink: /blog/:year/:month/:day/:title.html
 
 # Number of news stories on the front page.
-front_page_news: 4
+front_page_news: 5
 
 # Base pathname for links.
 #base: 'http://irenezhang.net'
@@ -28,5 +28,7 @@ navigation:
       link: /research/
     - title: Publications
       link: /publications.html
-    - title: Contact & c.
-      link: /contact.html
+    - title: Teaching
+      link: /teaching.html
+    - title: CV
+      link: /cv/cv.pdf
