--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ permalink: /blog/:year/:month/:day/:title.html
 front_page_news: 5
 
 # Base pathname for links.
-base: ''
+base: 'http://irenezhang.net'
 
 # Navigation bar links.
 navigation:
@@ -27,7 +27,5 @@ navigation:
       link: /research/
     - title: Publications
       link: /publications.html
-    - title: Teaching
-      link: /teaching.html
     - title: CV
       link: /cv/cv.pdf
