--- a/_config.yml
+++ b/_config.yml
@@ -29,4 +29,4 @@ navigation:
     - title: Publications
       link: /publications.html
     - title: CV
-      link: /cv/cv.pdf
+      link: /cv.html
