Adding a teaching page and updating my cv

--- a/_config.yml
+++ b/_config.yml
@@ -28,5 +28,7 @@ navigation:
       link: /research/
     - title: Publications
       link: /publications.html
+    - title: Teaching
+      link: /teaching.html
     - title: CV
       link: /cv/cv.pdf
