--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ permalink: /blog/:year/:month/:day/:title.html
 front_page_news: 3
 
 # Base pathname for links.
-base: '//irenezhang.net'
+base: ''
 
 # Navigation bar links.
 navigation:
