--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Irene Y. Zhang
 url: irenezhang.net
-exclude: [bibble, README.md, Makefile]
+exclude: [bibble, README.md, Makefile, job-search]
 
 # use this library to parse Markdown
 markdown: redcarpet
@@ -30,4 +30,4 @@ navigation:
     - title: Code
       link: /code.html
     - title: CV
-      link: /cv/cv.pdf
+      link: cv.pdf
