--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ navigation:
       link: /research/
     - title: Publications
       link: /publications.html
-    - title: Teaching
-      link: /teaching.html
+    - title: Service
+      link: /service.html
     - title: Code
       link: /code.html
     - title: CV
