--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ permalink: /blog/:year/:month/:day/:title.html
 front_page_news: 3
 
 # Base pathname for links.
-baseurl: '//irenezhang.net'
-#base: ''
+#baseurl: '//irenezhang.net'
+base: ''
 
 # Navigation bar links.
 navigation:
@@ -29,5 +29,5 @@ navigation:
       link: /service.html
     - title: Code
       link: /code.html
-    - title: CV
-      link: /cv/cv.pdf
+ #   - title: CV
+ #     link: /cv/cv.pdf
