--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Irene Y. Zhang
-url: irenezhang.net
+url: 0.0.0.0:4000
 exclude: [bibble, README.md, Makefile, job-search]
 
 # use this library to parse Markdown
@@ -23,6 +23,8 @@ navigation:
       link: /publications.html
     - title: Service
       link: /service.html
+    - title: Blog
+      link: /news.html
     - title: Code
       link: /code.html
  #   - title: CV
