--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Irene Y. Zhang
-url: 0.0.0.0:4000
+url: irenezhang.net
 exclude: [bibble, README.md, Makefile, job-search]
 
 # use this library to parse Markdown
